# ROS2-UnitreeG1-tutorial

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md  code-skeptic.md  colcon-builder.md  debugger.md  dependency-auditor.md  docs-writer.md  perf-auditor.md  regression-test-writer.md  ros-node-author.md  ros2-architect.md  security-reviewer.md  tutorial-writer.md  unitree-integrator.md  wsl-setup-checker.md
.claude/commands/: lesson-new.md  lesson-test.md  ros-bringup.md  ros-build.md  ros-doctor.md  ros-review.md  swe-add-test.md  swe-debug.md  swe-deps.md  swe-review.md  swe-security.md  swe-skeptic.md  swe-swarm-review.md
.claude/protocols/: PERFORMANCE_PROTOCOL.md  SECURITY_PROTOCOL.md  SKEPTIC_ARBITER.md  SWE_CORE.md  TESTING_PROTOCOL.md
.claude/scripts/: post_edit_verify.sh  pre_bash_guard.sh  session_start.sh  statusline.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  lesson_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  testing.md  troubleshooting.md  unitree_g1.md  walkthrough.html  wsl_nvidia.md
install/: .discovered.sh  00_prereqs.sh  01_micromamba.sh  02_robostack_ros2.sh  03_pip_layer.sh  04_unitree_sdk.sh  05_verify.sh  06_fetch_g1_assets.sh  INSTALL.md  _os.sh  cyclonedds.xml  cyclonedds_g1.xml  install.sh  requirements.txt
scripts/: deploy_and_test.sh  doctor.sh  lesson_new.sh  ros2_build.sh  ros2_env.sh  run_tutorial.sh
scripts/tools/: bag_play.sh  bag_record.sh  inspect.sh  rqt_graph.sh  rqt_plot.sh  sim_up.sh
tests/: conftest.py  test_imports.py  test_lessons.py
tests/integration/: full_e2e.sh  walkthrough_smoke.sh
ws/: colcon-defaults.yaml
ws/src/g1_bridge/: package.xml  setup.cfg  setup.py
ws/src/g1_bridge/g1_bridge/: __init__.py  bridge.py  safety.py  sdk.py
ws/src/g1_controller/: package.xml  setup.cfg  setup.py
ws/src/g1_controller/g1_controller/: __init__.py  demo.py  wave_client.py
ws/src/g1_speech/: package.xml  setup.cfg  setup.py
ws/src/g1_speech/g1_speech/: __init__.py  listen.py  speak.py
ws/src/humanoid_msgs/: CMakeLists.txt  package.xml
ws/src/humanoid_msgs/action/: WalkToPose.action
ws/src/humanoid_msgs/msg/: LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg  SportMode.msg
ws/src/humanoid_msgs/srv/: SetMode.srv
ws/src/tutorial_actions/: package.xml  setup.cfg  setup.py
ws/src/tutorial_actions/tutorial_actions/: __init__.py  fibonacci_client.py  fibonacci_server.py
ws/src/tutorial_basics/: package.xml  setup.cfg  setup.py
ws/src/tutorial_basics/tutorial_basics/: __init__.py  hello.py
ws/src/tutorial_lifecycle/: package.xml  setup.cfg  setup.py
ws/src/tutorial_lifecycle/tutorial_lifecycle/: __init__.py  lifecycle_talker.py
ws/src/tutorial_pubsub/: package.xml  setup.py
ws/src/tutorial_pubsub/tutorial_pubsub/: __init__.py  listener.py  talker.py
ws/src/tutorial_services/: package.xml  setup.cfg  setup.py
ws/src/tutorial_services/tutorial_services/: __init__.py  posture_client.py  posture_server.py
ws/src/tutorial_sim/: package.xml  setup.cfg  setup.py
ws/src/tutorial_sim/launch/: g1_sim.launch.py  sim.launch.py
ws/src/tutorial_sim/rviz/: g1.rviz  humanoid.rviz
ws/src/tutorial_sim/tutorial_sim/: __init__.py  animator.py  twist_listener.py
ws/src/tutorial_sim/urdf/: humanoid.urdf.xacro
ws/src/tutorial_tf/: package.xml  setup.cfg  setup.py
ws/src/tutorial_tf/tutorial_tf/: __init__.py  head_tracker.py  static_publisher.py
