<?xml version="1.0"?>
<package format="3">
  <name>g1_speech</name>
  <version>0.1.0</version>
  <description>Lesson 08 — voice in (VAD-gated microphone capture) and voice out (offline TTS) for the G1.</description>
  <maintainer email="tutorial@example.com">ROS Tutorial</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
