<?xml version="1.0"?>
<package format="3">
  <name>tutorial_services</name>
  <version>0.1.0</version>
  <description>Lesson 03 — services. One-shot request/reply for state changes a robot makes rarely.</description>
  <maintainer email="tutorial@example.com">ROS Tutorial</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
