<?xml version="1.0"?>
<package format="3">
  <name>tutorial_sim</name>
  <version>0.1.0</version>
  <description>Simulated humanoid: URDF + robot_state_publisher + joint animator + rviz2 preset. Hands-on practice for the ROS 2 toolkit without a real robot.</description>
  <maintainer email="tutorial@example.com">ROS Tutorial</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
