<?xml version="1.0"?>
<package format="3">
  <name>tutorial_sim</name>
  <version>0.1.0</version>
  <description>Drives the Unitree G1 URDF in rviz2 — robot_state_publisher + joint animator + preset rviz config. Animates all 29 G1 joints through wave / walk / squat / tpose / stretch patterns.</description>
  <maintainer email="tutorial@example.com">ROS Tutorial</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>g1_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
